Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 
 <p>The development of PSObjectMapping came out of a personal need, and although it is being used in production, it is still very much a work in progress.</p>
 
+<h2>
+<a name="example-setup" class="anchor" href="#example-setup"><span class="octicon octicon-link"></span></a>Example Setup</h2>
+
+<p><img src="https://raw.github.com/premosystems/PSObjectMapping/gh-pages/xcdatamodel-primary-key-screenshot.png" alt="XCode Data Model Primary Key Setup"></p>
+
 <h1>
 <a name="example-usage" class="anchor" href="#example-usage"><span class="octicon octicon-link"></span></a>Example Usage</h1>
 
