Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 <h2>
 <a name="example-setup" class="anchor" href="#example-setup"><span class="octicon octicon-link"></span></a>Example Setup</h2>
 
-<p>To support object mapping, you must tell PSObjectMapping whih property on your XCDataModel is the object's primary key. An example is depicted in the screenshot below.</p>
+<p>To use PSObjectMapping, add the files in the PSObjectMapping directory, or install using <a href="http://cocoapods.org/">CocoaPods</a>.</p>
+
+<p>To support object mapping, you must tell PSObjectMapping which property on your XCDataModel is the object's primary key. An example is depicted in the screenshot below:</p>
 
 <p><img src="https://raw.github.com/premosystems/PSObjectMapping/gh-pages/xcdatamodel-primary-key-screenshot.png" alt="XCode Data Model Primary Key Setup"></p>
 
@@ -91,6 +93,12 @@
 <p>See the including example project for complete details.</p>
 
 <h2>
+<a name="todo--known-issues" class="anchor" href="#todo--known-issues"><span class="octicon octicon-link"></span></a>TODO / Known Issues</h2>
+
+<ul>
+<li>Alter property mapping logic to accept key paths to describe which data point to map in the hierarchy.</li>
+<li>Documentation, unit tests</li>
+</ul><h2>
 <a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
 
 <p>For questions or issues with PSObjectMapping please contact <a href="https://github.com/premosystems">premosystems</a></p>
