Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <p>Where responseObject is an NSArray of dictionaries. If the collection is a dictionary with an array inside one of its keys, just tell PSObjectMapping what the rootObjectKey is and it will automatically extract it.</p>
 
-<p>See the including example project for complete details.</p>
+<p>See the included ObjectMappingSample project for complete details.</p>
 
 <h2>
 <a name="todo--known-issues" class="anchor" href="#todo--known-issues"><span class="octicon octicon-link"></span></a>TODO / Known Issues</h2>
