Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
 <p>The development of PSObjectMapping came out of a personal need, and although it is being used in production, it is still very much a work in progress.</p>
 
+<p>Documentation can be found <a href="http://premosystems.github.io/PSObjectMapping/docs/html/">HERE</a>.</p>
+
 <h2>
 <a name="example-setup" class="anchor" href="#example-setup"><span class="octicon octicon-link"></span></a>Example Setup</h2>
 
